--- a/src/renderer/scss/component/_file-render.scss
+++ b/src/renderer/scss/component/_file-render.scss
@@ -1,21 +1,23 @@
 .file-render {
   width: 100%;
   height: 100%;
-  margin: auto;
-  position: absolute;
   top: 0;
   left: 0;
-  right: 0;
   bottom: 0;
-  z-index: 1;
+  right: 0;
+
+  margin: auto;
   overflow: hidden;
+  position: absolute;
+  z-index: 1;
 }
 
 .file-render__viewer {
-  margin: 0;
   width: 100%;
   height: 100%;
+
   background-color: $lbry-black;
+  margin: 0;
 
   iframe,
   webview {
@@ -25,63 +27,64 @@
 }
 
 .document-viewer {
-  overflow: auto;
   background-color: $lbry-white;
   font-size: calc(var(--font-size-subtext-multiple) * 1em);
-}
-
-.document-viewer .markdown-preview {
-  height: 100%;
   overflow: auto;
-  padding: $spacing-vertical $spacing-width;
+
+  .markdown-preview {
+    height: 100%;
+    overflow: auto;
+    padding: $spacing-vertical $spacing-width;
+  }
 }
 
 .code-viewer,
 .document-viewer__content {
-  overflow: auto;
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
-/* Code-viewer */
+// Code-viewer
 .code-viewer .CodeMirror {
-  margin: 0;
-  padding: 0;
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
   min-height: 100px;
 
-  /* Block native text selection */
+  // Block native text selection
   user-select: none;
 
-  .CodeMirror-code {
-    font-size: 1em;
-    font-weight: 350;
-    line-height: 1.5em;
-    font-family: Menlo, Consolas, 'DejaVu Sans Mono', inconsolata, monospace;
-    letter-spacing: 0.3px;
-    word-spacing: 1px;
-  }
-
-  .CodeMirror-linenumber {
-    color: $lbry-gray-5;
+  .cm-invalidchar {
+    display: none;
   }
 
   .CodeMirror .CodeMirror-lines {
+    // is there really a .CodeMirror inside a .CodeMirror?
     padding: 4px 0;
+  }
+
+  .CodeMirror-code {
+    font-family: Menlo, Consolas, 'DejaVu Sans Mono', inconsolata, monospace;
+    font-size: 1em;
+    font-weight: 350;
+    letter-spacing: 0.3px;
+    line-height: 1.5em;
+    word-spacing: 1px;
+  }
+
+  .CodeMirror-gutters {
+    background-color: $lbry-gray-1;
+    border-right: 1px solid $lbry-gray-2;
+    padding-right: 8px;
   }
 
   .CodeMirror-line {
     padding-left: 16px;
   }
 
-  .CodeMirror-gutters {
-    border-right: 1px solid $lbry-gray-2;
-    background: $lbry-gray-1;
-    padding-right: 8px;
-  }
-
-  .cm-invalidchar {
-    display: none;
+  .CodeMirror-linenumber {
+    color: $lbry-gray-5;
   }
 }
