--- a/src/renderer/scss/component/_search.scss
+++ b/src/renderer/scss/component/_search.scss
@@ -1,58 +1,59 @@
 .wunderbar {
-  z-index: 1;
-  flex: 1;
-  display: flex;
-  min-width: 175px;
   cursor: text;
+  display: flex;
+  flex: 1;
+  min-width: 175px;
   position: relative;
+  z-index: 1;
 
   > .icon {
-    position: absolute;
-    left: 10px;
     top: 10px;
+    left: 10px;
+
+    position: absolute;
     z-index: 1;
   }
 }
 
+.wunderbar__active-suggestion {
+  background-color: $lbry-blue-2;
+  color: $lbry-black;
+}
+
 .wunderbar__input {
-  height: var(--btn-height);
-  // border-radius: var(--btn-radius);
   width: 100%;
-  color: $lbry-gray-5;
-  background-color: rgba($lbry-gray-1, 0.3);
-  // box-shadow: var(--box-shadow-wunderbar);
-  padding: 10px;
-  padding-left: 30px;
-  font-size: 13px;
-  display: flex;
+  height: var(--btn-height);
+
   align-items: center;
+  background-color: rgba($lbry-gray-1, 0.3);
+  border-bottom: none; // ?
+  color: $lbry-gray-5;
+  display: flex;
+  font-size: 13px;
   justify-content: center;
-  border-bottom: none;
+  padding: 10px 10px 10px 30px;
 
   &:focus {
     background-color: rgba($lbry-gray-1, 0.5);
-    // border-radius: 0;
-    // border-bottom: 1px solid $lbry-gray-2;
-    // box-shadow: var(--box-shadow-button);
   }
 }
 
 .wunderbar__menu {
+  background-color: transparent; // !important
+  border-radius: 0 0 3px 3px; // !important
   max-width: 100px;
-  border-radius: 0 0 3px 3px !important;
-  padding: 0 !important;
-  background: transparent !important;
   overflow-x: hidden;
+  padding: 0; // !important
 }
 
 .wunderbar__suggestion {
-  padding: 5px 10px;
+  align-items: center;
   background-color: $lbry-gray-5;
   cursor: pointer;
   display: flex;
   flex-direction: row;
   justify-items: flex-start;
-  align-items: center;
+  padding: 5px 10px;
 
   &:not(:first-of-type) {
     border-top: 1px solid transparent;
@@ -71,20 +72,10 @@
 }
 
 .wunderbar__suggestion-label--action {
-  margin-left: $spacing-vertical * 1/3;
-  white-space: nowrap;
   font-size: 12px;
   line-height: 0.1; // to vertically align because the font size is smaller
-}
-
-.wunderbar__active-suggestion {
-  color: $lbry-black;
-  background-color: $lbry-blue-2;
-}
-
-.search__top {
-  padding: 0 $spacing-width $spacing-width;
-  background-color: $lbry-gray-2;
+  margin-left: $spacing-vertical * 1/3;
+  white-space: nowrap;
 }
 
 .search__content {
@@ -103,4 +94,9 @@
       padding-top: 0;
     }
   }
+}
+
+.search__top {
+  background-color: $lbry-gray-2;
+  padding: 0 $spacing-width $spacing-width;
 }
