--- a/src/renderer/scss/component/_toggle.scss
+++ b/src/renderer/scss/component/_toggle.scss
@@ -1,15 +1,15 @@
 // Taken from react-toggle/style.css
 // Edited to add the teal color, nothing else
 .react-toggle {
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
   background-color: transparent;
-  border: 0;
-  padding: 0;
-  user-select: none;
-  margin-bottom: auto;
+  border: none;
+  cursor: pointer;
+  display: inline-block;
   margin-top: 2px;
+  margin-bottom: auto;
+  padding: 0;
+  position: relative;
+  user-select: none;
 
   &:hover {
     &:not(.react-toggle--disabled) {
@@ -43,8 +43,8 @@
   }
 
   .react-toggle-thumb {
-    left: 22px;
     border-color: $lbry-teal-3;
+    left: 22px;
   }
 }
 
@@ -55,63 +55,67 @@
 }
 
 .react-toggle-screenreader-only {
-  border: 0;
-  clip: rect(0 0 0 0);
+  width: 1px;
   height: 1px;
   margin: -1px;
-  overflow: hidden;
   padding: 0;
+
+  border: none;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
   position: absolute;
-  width: 1px;
 }
 
 .react-toggle-thumb {
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-  position: absolute;
-  top: 1px;
-  left: 1px;
   width: 17px;
   height: 17px;
+  top: 1px;
+  left: 1px;
+
+  background-color: $lbry-gray-1;
   border: 1px solid $lbry-gray-5;
   border-radius: 50%;
-  background-color: $lbry-gray-1;
   box-sizing: border-box;
+  position: absolute;
   transition: all 0.25s ease;
 }
 
 .react-toggle-track {
   width: 40px;
   height: 19px;
-  padding: 0;
-  border-radius: 30px;
+
   background-color: $lbry-gray-5;
+  border-radius: 30px;
+  padding: 0;
   transition: all 0.2s ease;
 }
 
 .react-toggle-track-check {
-  position: absolute;
   width: 14px;
   height: 10px;
   top: 0;
+  left: 6px;
   bottom: 0;
+
+  line-height: 0;
   margin-top: auto;
   margin-bottom: auto;
-  line-height: 0;
-  left: 6px;
   opacity: 0;
+  position: absolute;
   transition: opacity 0.25s ease;
 }
 
 .react-toggle-track-x {
-  position: absolute;
   width: 10px;
   height: 10px;
   top: 0;
   bottom: 0;
+  right: 10px;
+
   margin-top: auto;
   margin-bottom: auto;
   line-height: 0;
-  right: 10px;
   opacity: 1;
+  position: absolute;
   transition: opacity 0.25s ease;
 }
